finish thankyou page

--- a/6.thankyou.html
+++ b/6.thankyou.html
@@ -57,17 +57,28 @@
 						<div class="row">
 							<div class="part-header"><span class="header-ico"><img src="images/ui/done-icon.png"></span>Tak fordi du udfyldte din ønskeliste.</div>
 							<div class="page-content thankyou-content col-md-6">
+								<br />
+								<br />
 								<h2 class="thanks-message">Din ønskeliste er nu færdig og sendt!
 								</h2>
+								<br />
+
 								<div class="thanks-fb-share">
 									<p>Del konkurrencen på Facebook, så kan dine venner også være med.</p>
-									<a href="#" class="fb-btn">Del</a>
+									<a href="#" class="fb-btn">DEL</a>
 								</div>
+								<br />
 								<div class="thanks-fb-like">
 									<p>‘Like’ Lelujen Aarrearkku på Facebook.</p>
 									<a href="#" class="fb-btn">Gå til facebook side</a>
 								</div>
-								<p>Vi ønsker dig og din familie en rigtig glædelig jul.</p>
+								<br/>
+								<br/>
+								<br/>
+								<br/>
+								<br/>
+								<br/>
+								<p style="color: #cc2421; font-size:18px;"><strong>Vi ønsker dig og din familie en rigtig glædelig jul.</strong></p>
 							</div>
 							<div class="thankyou-bg col-md-6">b</div>
 						</div>
