finish the wishlist slider

--- a/5. Formular.html
+++ b/5. Formular.html
@@ -42,7 +42,7 @@
 						<li><a href="#">Forhandlere</a></li>
 						<li><a href="#">Konkurrence</a></li>
 						<li><a href="#">Spil</a></li>
-						<li><a href="#">Nyheder</a></li>sssss
+						<li><a href="#">Nyheder</a></li>
 				</ul>	
 			</div>
 		</div>
