--- a/5. Formular.html
+++ b/5. Formular.html
@@ -60,11 +60,11 @@
 								<h3>Udfyld formularen og deltag i vores store julekonkurrence om 4 x 500€.</h3>
 								<hr/>
 								<div class="checkbox-group">
-									<input type="checkbox" value="None" id="squaredTwo" name="emailcheck" />
-									<label for="squaredTwo"></label>
+									<input type="checkbox" value="0" id="emailcheck" name="emailcheck" />
+									<label for="emailcheck"></label>
 								</div>
-								<label for="getemail">Ja tak, Jeg ønsker at deltage i konkurrencen og modtage min ønskeliste per mail.</label>
-								<div class="email-info" inputgroup="getmail">
+								<label for="emailcheck">Ja tak, Jeg ønsker at deltage i konkurrencen og modtage min ønskeliste per mail.</label>
+								<div class="email-info disable" inputgroup="getmail">
 									<table>
 										<tr>
 											<td><input type="text" placeholder="Fornavn*"></td>
