--- a/5. Formular.html
+++ b/5. Formular.html
@@ -136,7 +136,7 @@
 								</div>
 								<h3>Udfyld formularen og deltag i vores store julekonkurrence om 4 x 500€.</h3>
 								<hr/>
-								<textarea style="width: 620px;">Indtast e-mail separeret med komma f.eks.: johan@mail.dk,line@mail.dk</textarea>
+								<textarea style="width: 620px;" placeholder="Indtast e-mail separeret med komma f.eks.: johan@mail.dk,line@mail.dk"></textarea>
 
 								<input type="submit" value="FÆRDIG">
 							</form>							
