--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
+	<!-- <meta name='viewport' content='width=1190'> -->
 	<title>Norstar</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/norstar.css">
@@ -72,7 +72,7 @@
 
 				<!-- GRID PROMO CARDS -->
 				<div class="clearfix row">
-					<div class="col-md-5">
+					<div class="col-xs-5">
 						<div class="promo-card col-xs-12" id="wishlist-card">
 							<h1>Lav din egen <span>Ønskeseddel</span></h1>
 							<p>Gå på opdagelse i kataloget, og lav din helt egen ønskeseddel til din familie.</p>
@@ -87,7 +87,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-7">
+					<div class="col-xs-7">
 						<div class="promo-card col-xs-12" id="event-card">
 							<div>
 								<h1>Stor konkurrence</h1>
@@ -147,7 +147,7 @@
 
 				<!-- Game and facebook -->
 				<div class="clearfix row" style="padding-top: 30px;">
-					<div class="col-md-5" >
+					<div class="col-xs-5" >
 						<div class="promo-card social-card" id="game-card">
 							<h1>Spil</h1>
 							<p>Fusce hendrerit rhoncus sapien,<br /> vitae placerat massa vehicula <br />ut. Morbi sodales consectetur </p>
@@ -156,7 +156,7 @@
 						</div>
 						
 					</div>
-					<div class="col-md-7" >
+					<div class="col-xs-7" >
 						<div class="promo-card social-card" id="facebook-card">
 							<h1>Facebook</h1>
 							<p>Fusce hendrerit rhoncus sapien,<br /> vitae placerat massa vehicula <br />ut. Morbi sodales consectetur </p>
@@ -173,7 +173,7 @@
 	<footer id="main-footer" class="masthead">
 		<div id="footer-top" class="page-wrapper">
 			<div class="clearfix footer-links row">
-				<div class="col-md-3">
+				<div class="col-xs-3">
 					<ul class="list-group nav">
 						<li><a href="#">Information til forældre</a></li>
 						<li><a href="#">Information til børn </a></li>
@@ -181,7 +181,7 @@
 						<li><a href="#">Privatliv</a></li>
 					</ul>
 				</div>
-				<div class="col-md-3">
+				<div class="col-xs-3">
 					<ul class="list-group nav">
 						<li><a href="#">Information til forældre</a></li>
 						<li><a href="#">Information til børn </a></li>
@@ -189,7 +189,7 @@
 						<li><a href="#">Privatliv</a></li>
 					</ul>
 				</div>
-				<div class="col-md-3">
+				<div class="col-xs-3">
 					<ul class="list-group nav">
 						<li><a href="#">Information til forældre</a></li>
 						<li><a href="#">Information til børn </a></li>
@@ -197,7 +197,7 @@
 						<li><a href="#">Privatliv</a></li>
 					</ul>
 				</div>
-				<div class="col-md-3">
+				<div class="col-xs-3">
 					<ul class="footer-social">
 						<li><a href="#"><img src="images/social/insta.png"></a></li>
 						<li><a href="#"><img src="images/social/youtube.png"></a></li>
